# btl

./: .gitignore  Cargo.toml  autopilot.md  btl-server.service  deploying.md  game-design.md  game-tech.md  implementation-plan.md
.github/workflows/: pages.yml
crates/btl-client/: Cargo.toml  Trunk.toml  index.html
crates/btl-client/src/: audio.rs  client.rs  effects.rs  main.rs  minimap.rs  nebula.rs  particles.rs  starfield.rs
crates/btl-protocol/: Cargo.toml
crates/btl-protocol/src/: lib.rs
crates/btl-server/: Cargo.toml
crates/btl-server/src/: main.rs  server.rs
crates/btl-sfx-gen/: Cargo.toml
crates/btl-sfx-gen/src/: main.rs
crates/btl-shared/: Cargo.toml
crates/btl-shared/src/: lib.rs  nebula.rs  rng.rs
