[workspace]
members = [
    "crates/btl-protocol",
    "crates/btl-shared",
    "crates/btl-server",
    "crates/btl-client",
]
resolver = "3"

# Fast compile times for development
[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

# Optimized WASM builds
[profile.web-release]
inherits = "release"
opt-level = "z"
lto = true
