[package]
name = "btl-client"
version = "0.1.0"
edition = "2024"

[dependencies]
btl-protocol = { path = "../btl-protocol" }
btl-shared = { path = "../btl-shared" }
bevy = "0.18.1"
lightyear = { version = "0.26.4", features = [
    "client",
    "webtransport",
    "webtransport_dangerous_configuration",
    "netcode",
    "input_native",
    "replication",
    "prediction",
    "interpolation",
    "frame_interpolation",
    "avian2d",
] }
clap = { version = "4", features = ["derive"] }
