[package]
name = "btl-client"
version = "0.1.0"
edition = "2024"

[features]
default = ["native"]
native = ["dep:clap"]
webgl = ["bevy/webgl2"]
webgpu = ["bevy/webgpu"]

[dependencies]
btl-protocol = { path = "../btl-protocol" }
btl-shared = { path = "../btl-shared" }
bevy = { version = "0.18.1" }
avian2d = "0.5.0"
lightyear = { version = "0.26.4", features = [
    "client",
    "webtransport",
    "netcode",
    "input_native",
    "replication",
    "prediction",
    "interpolation",
    "frame_interpolation",
    "avian2d",
] }
clap = { version = "4", features = ["derive"], optional = true }

# Native-only: skip cert validation for dev
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
lightyear = { version = "0.26.4", features = ["webtransport_dangerous_configuration"] }

# WASM: getrandom js support + browser APIs
[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }
web-sys = { version = "0.3", features = ["Window", "Location", "Response"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
console_error_panic_hook = "0.1"
