[package]
name = "btl-protocol"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.18.1", default-features = false }
lightyear = { version = "0.26.4", features = [
    "input_native",
    "replication",
    "prediction",
    "interpolation",
] }
avian2d = { version = "0.5.0", features = ["serialize"] }
serde = { version = "1", features = ["derive"] }
