[package]
name = "btl-protocol"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.18.1", default-features = false }
lightyear = { version = "0.26.4", default-features = false, features = [
    "input_native",
    "replication",
] }
serde = { version = "1", features = ["derive"] }
