[package]
name = "btl-server"
version = "0.1.0"
edition = "2024"

[dependencies]
btl-protocol = { path = "../btl-protocol" }
btl-shared = { path = "../btl-shared" }
bevy = { version = "0.18.1", default-features = false, features = [
    "bevy_state",
    "bevy_log",
    "multi_threaded",
] }
avian2d = { version = "0.5.0", default-features = false, features = [
    "2d",
    "f32",
    "parry-f32",
    "default-collider",
    "parallel",
] }
lightyear = { version = "0.26.4", features = [
    "server",
    "webtransport",
    "webtransport_self_signed",
    "netcode",
    "input_native",
    "replication",
    "prediction",
    "interpolation",
    "avian2d",
] }
