[package]
name = "btl-shared"
version = "0.1.0"
edition = "2024"

[dependencies]
btl-protocol = { path = "../btl-protocol" }
bevy = "0.18.1"
lightyear = { version = "0.26.4", features = [
    "input_native",
    "replication",
    "prediction",
    "interpolation",
    "frame_interpolation",
    "avian2d",
] }
avian2d = { version = "0.5.0", features = ["serialize"] }
